[project]
authors = [
    {name = "benjamin-awd", email = "benjamindornel@gmail.com"},
]
license = {text = "AGPL-3.0"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.0",
    "pdftotext>=3.0.0",
    "click>=8.2.1",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
    "pydantic>=2.11.5",
    "dateparser>=1.2.1",
    "strenum>=0.4.15",
]
name = "monopoly-core"
version = "0.18.0"
description = "Monopoly is a Python library & CLI that converts bank statement PDFs to CSV"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = "https://github.com/benjamin-awd/monopoly"

[project.optional-dependencies]
ocr = [
    "ocrmypdf>=16.5.0,<17.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/monopoly", "tests/test_utils"]

[project.scripts]
monopoly = "monopoly.cli:monopoly"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "isort>=6.0.1",
    "taskipy>=1.14.1",
    "pytest>=8.3.5",
    "pysnooper>=1.2.3",
    "pylint-pydantic>=0.3.5",
    "mypy>=1.16.0",
    "types-tqdm>=4.67.0.20250516",
    "types-dateparser>=1.2.0.20250601",
    "types-tabulate>=0.9.0.20241207",
    "pytest-xdist>=3.7.0",
    "flake8>=7.2.0",
    "ruff>=0.11.12",
    "git-cliff>=2.8.0",
]


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
exclude = ["tests/*"]

ignore = [
    # modules
    "ANN",

    # specific rules
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "ISC001",
    "PTH123"
]

[tool.ruff.lint.per-file-ignores]
"**/banks/**.py" = ["RUF012"]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
test = "pytest ."
mypy = "mypy src"


[tool.mypy]
disable_error_code = [
    "annotation-unchecked",
]

[[tool.mypy.overrides]]
module = [
    "pymupdf",
    "ocrmypdf",
    "ocrmypdf.exceptions",
    "pdftotext",
    "pdf2john",
]
ignore_missing_imports = true
